# cellular-automata-gpu

./: .gitignore  CMakeLists.txt  NOTES.md  main.cpp  parameter.h  rules.cpp  rules.h  simulation.h
calibration/: calibrate.jl  calibrate_naive.jl  install_requirements.jl
helper/: cpptoml.h  fileio.h  inireader.h
include/: parameter.h  rules.h  simulation.h
sample/: README.md  config.toml
simulation/: simulation.cpp
test/: CMakeLists.txt  run_test.cpp
